<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/exibit_cover_view_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/history_cover"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@drawable/overlay"
                android:layout_alignParentBottom="true"
                android:paddingLeft="20dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerveiw_history_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />

            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history_title"
                style="@style/TitleTextStyle"
                android:paddingLeft="20dp"
                android:paddingBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history_text_one"
                style="@style/InfoTextStyle"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginBottom="15dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history_text_two"
                style="@style/InfoTextStyle"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginBottom="15dp"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history_text_three"
                android:paddingLeft="20dp"
                style="@style/InfoTextStyle"
                android:paddingRight="20dp"
                android:layout_marginBottom="15dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history_text_four"
                style="@style/InfoTextStyle"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginBottom="15dp"
                />


        </LinearLayout>

    </ScrollView>





</LinearLayout>