<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/map_img_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/matka_map_img"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@drawable/overlay"
                android:layout_alignParentBottom="true"
                android:paddingLeft="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_f_location"
                    style="@style/TitleTextStyle"
                    android:layout_gravity="bottom" />

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@color/color_white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp">

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/contact_f_adress"
               android:textColor="@color/text_color_black"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/work_hours_title_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_f_working_hours"
                    style="@style/TitleTextStyle"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="25dp"/>

                <TextView
                    android:id="@+id/months_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_f_months"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/text_color_black"
                    android:layout_below="@id/work_hours_title_id"/>

                <TextView
                    android:id="@+id/days_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_f_days"
                    android:textColor="@color/text_color_black"
                    android:layout_below="@id/months_id"/>

                <TextView
                    android:id="@+id/work_hours_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_f_working_h_range"
                    android:textColor="@color/text_color_black"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/work_hours_title_id"
                    android:layout_marginRight="30dp"/>

                <TextView
                    android:id="@+id/contact_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_f_contact"
                    android:layout_gravity="bottom"
                    style="@style/TitleTextStyle"
                    android:layout_marginTop="25dp"
                    android:layout_below="@id/days_id"/>

                <TextView
                    android:id="@+id/tel_num_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="072/935-105"
                    android:textColor="@color/text_color_black"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/days_id"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="30dp"
                    android:paddingTop="5dp"
                    />

                <TextView
                    android:id="@+id/to_matka_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_f_to_matka"
                    android:layout_gravity="bottom"
                    style="@style/TitleTextStyle"
                    android:layout_marginTop="25dp"
                    android:layout_below="@id/contact_id"/>

                <TextView
                    android:id="@+id/to_skopje_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_f_to_skopje"
                    style="@style/TitleTextStyle"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="30dp"
                    android:layout_below="@id/to_matka_id"/>

                <ImageView
                    android:id="@+id/bus_down"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_bus"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/bus_up"
                    android:layout_toLeftOf="@id/taxi"
                    android:layout_marginRight="30dp"/>

                <ImageView
                    android:id="@+id/plane"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_plane"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/bus_up"
                    android:layout_toLeftOf="@id/bus_down"
                    android:layout_marginRight="30dp"/>

                <ImageView
                    android:id="@+id/contact_logo"
                    android:layout_width="50dp"
                    android:layout_height="18dp"
                    android:src="@drawable/evn_logo"
                    android:scaleType="centerCrop"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/to_skopje_id"/>


                <ImageView
                    android:id="@+id/taxi"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_taxi"
                    android:scaleType="centerCrop"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/tel_num_id"
                    android:layout_marginRight="30dp"
                    />

                <ImageView
                    android:id="@+id/bus_up"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_bus"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/tel_num_id"
                    android:layout_toLeftOf="@id/taxi"
                    android:layout_marginRight="30dp"/>

                <ImageView
                    android:id="@+id/train"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_bus"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/taxi"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="30dp"/>

            </RelativeLayout>
        </LinearLayout>

    </ScrollView>





</LinearLayout>